--- a/D&D5ERoller/src/main/AndroidManifest.xml
+++ b/D&D5ERoller/src/main/AndroidManifest.xml
@@ -20,6 +20,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".activity.CharacterSheet"
+            android:label="@string/title_activity_character_sheet"></activity>
     </application>
 
 </manifest>
